dynomite/trybuild-tests/fail/item-not-on-struct-fail.stderr
error[E0774]: `derive` may only be applied to structs, enums and unions
 --> $DIR/item-not-on-struct-fail.rs:9:1
  |
9 | #[derive(Item)]
  | ^^^^^^^^^^^^^^^

warning: unused import: `dynomite_derive::Item`
 --> $DIR/item-not-on-struct-fail.rs:1:5
  |
1 | use dynomite_derive::Item;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
